--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+server.port=${PORT:8080}
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/uploadimages
 spring.datasource.username=postgres
 spring.datasource.password=azerty
+
+spring.jackson.default-property-inclusion=non_null
