--- a/app-mobile/pubspec.yaml
+++ b/app-mobile/pubspec.yaml
@@ -27,6 +27,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  image_picker:
+  http: ^0.13.5
   flutter:
     sdk: flutter
 
