--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port=${PORT:8080}
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://localhost:5432/uploadimages
-spring.datasource.username=postgres
-spring.datasource.password=azerty
+spring.datasource.url=jdbc:postgresql://localhost:5432/your_database
+spring.datasource.username=your_username
+spring.datasource.password=your_password
 
 spring.jackson.default-property-inclusion=non_null
